--- a/application/build.gradle
+++ b/application/build.gradle
@@ -13,5 +13,5 @@ dependencies {
     compile project(":usecase")
     compile project(":persistence")
     compile project(":restapi")
-    compile project(":service")
+    compile project(":services")
 }
