--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'faccamp-crawler'
-include 'usecase', 'persistence', 'service', 'restapi', 'application'
+include 'usecase', 'persistence', 'crawler', 'parser', 'restapi', 'application'
