Initial implementations of FaccampConnector (Not authorizing login)

--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -9,3 +9,6 @@ server.contextPath=/
 jetty.minThreads=100
 jetty.maxThreads=500
 jetty.idleTimeout=30000
+
+faccamp.url.home=https://www.psxportalacademico.com.br/faccamp/index.php
+faccamp.url.login=https://www.psxportalacademico.com.br/faccamp/validacao.php
