Sending correct headers to pass through login validation

--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -11,4 +11,4 @@ jetty.maxThreads=500
 jetty.idleTimeout=30000
 
 faccamp.url.home=https://www.psxportalacademico.com.br/faccamp/index.php
-faccamp.url.login=https://www.psxportalacademico.com.br/faccamp/validacao.php
+faccamp.url.validation=https://www.psxportalacademico.com.br/faccamp/validacao.php
