Structure tweaks and adding StudentDataParser implementation and test

--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -10,5 +10,6 @@ jetty.minThreads=100
 jetty.maxThreads=500
 jetty.idleTimeout=30000
 
-faccamp.url.home=https://www.psxportalacademico.com.br/faccamp/index.php
+faccamp.url.index=https://www.psxportalacademico.com.br/faccamp/index.php
 faccamp.url.validation=https://www.psxportalacademico.com.br/faccamp/validacao.php
+faccamp.url.portal=https://www.psxportalacademico.com.br/faccamp/pg_portal.php
