--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4"
-        classpath "org.jetbrains.kotlin:kotlin-allopen:1.1.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4-2"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:1.1.4-2"
     }
 }
 
@@ -31,8 +31,8 @@ subprojects {
     }
 
     dependencies {
-        compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: '1.1.4'
-        compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.1.4'
+        compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jre8', version: '1.1.4-2'
+        compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.1.4-2'
 
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
         compile 'org.springframework:spring-context:4.3.9.RELEASE'
