--- a/restapi/build.gradle
+++ b/restapi/build.gradle
@@ -3,5 +3,7 @@ dependencies {
     compile group: 'ro.pippo', name: 'pippo-jetty', version: '1.4.0'
     compile group: 'ro.pippo', name: 'pippo-jackson', version: '1.4.0'
 
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.4.0'
+
     compile project(":usecase")
 }
