Initial implementation of cache storing funcionality

--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -13,3 +13,9 @@ jetty.idleTimeout=30000
 faccamp.url.index=https://www.psxportalacademico.com.br/faccamp/index.php
 faccamp.url.validation=https://www.psxportalacademico.com.br/faccamp/validacao.php
 faccamp.url.portal=https://www.psxportalacademico.com.br/faccamp/pg_portal.php
+
+cache.expiration.time=2
+
+database.address=127.0.0.1
+database.port=27017
+database.name=faccamp
