--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ buildscript {
     }
 }
 
-
 subprojects {
     version = '1.0'
     group = 'br.com.ivanzao'
@@ -49,4 +48,8 @@ subprojects {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+}
+
+task stage {
+    dependsOn(':application:build')
 }
