--- a/usecase/src/main/resources/application.properties
+++ b/usecase/src/main/resources/application.properties
@@ -2,7 +2,8 @@ application.name=FaccampCrawler
 application.version=1.0
 application.languages=en
 
-server.port=8080
+server.port=${PORT:8080}
+#server.port=${PORT:8080}
 server.host=0.0.0.0
 server.contextPath=/
 
